* [MOD] Updated Zabbix API to 2.2.5 and 2.4.5 versions.
* [FIX] Fixed issue when retrieving data from Zabbix triggers. Thanks to @ZUNbado
* [FIX] Fixed issue when saving status info column state. Thanks to @ZUNbado

* [FIX] Fixed config saving when no backends are defined.
* [FIX] Fixed language detection when no config is set.
* [FIX] Fixed PHP version comparison * [MOD] Improved error handling when retrieving events from remote backends.

* [FIX] Fixed PHP version comparison
* [MOD] Improved error handling when retrieving events from remote backends.
* [MOD] API requests are now coded into a PHP serialized string and wrapped with JSON. * [MOD] More secure config hash generation.
* [FIX] PHP 5.3 compatibility issues
* [MOD] Warns if cURL is unavailable
* [FIX] Minor bugfixes
* [MOD] Compatible with PHP 5.3
* [ADD] New sysMonDash API for SMD remote backends type. This allows to query a sysMonDash proxy backend to get the events from several remote backends.
* [ADD] Audio alarm support for new events.
* [MOD] Fix style
* [ADD] New version detection
* [ADD] Incompatible PHP version detection
* [ADD] Show items names when using Zabbix backends.
* [ADD] Show filters applied when all items are shown.
* [MOD] Improved events retrieving.
* [FIX] Fixed issue when saving config.
* [FIX] Fixed issue when showing acknowledged events.
* [FIX] Fixed raw data view.
* [FIX] Fixed issue when removing a backend.
* [MOD] Improved initialization * [MOD] Updated translation
* [ADD] Add backend alias setting
* [MOD] Split display filters * [MOD] Removed unused config options

* [ADD] Multiple backends definition * [MOD] Some tweaks
* [ADD] Multiple backends definition * [MOD] Some tweaks
* [ADD] Multiple backends definition * [MOD] Some tweaks
* [FIX] Revert (Detect Zabbix recovered states)
* [ADD] Detect Zabbix recovered states
* [MOD] Change Zabbix events retrieving method.
* [ADD] Detect page reloading.
* [MOD] Don't ask for Zabbix pass if it's set.
* [MOD] Case insensitive regex